# oasisbr-scraper

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
oasisbr_scraper/api/: __init__.py  oasis_api.py
